# zunzun

./: ARCHITECTURE.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  RUN_GLM52.md  TESTING.md  flake.nix  run_glm52.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bench/: README.md  g1_bandwidth.cpp  spec_probe.sh
bench/spec/: BISECT.md  PROBES.md  WIRING-AUDIT.md  probe_gap_D.err  probe_gap_D.out  probe_gap_E.err  probe_gap_E.out  probe_i4s1_D.err  probe_i4s1_D.out  probe_i4s1_E.err  probe_i4s1_E.out  probe_ltrace_D.err  probe_ltrace_D.out  probe_ltrace_E.err  probe_ltrace_E.out  run_A.err  run_A.out  run_A2.err  run_A2.out  run_B.err  run_B.out  run_D.err  run_D.out  run_D2.err  run_D2.out  run_D_topp07.err  run_D_topp07.out  run_E.err  run_E.out  run_gate.sh  run_gpu96.sh  run_sweep.sh  run_sweep2.sh
c/: .gitignore  Makefile  backend.h  backend_hip.cpp  backend_hip.h  cache.h  compat.h  doctor.py  glm.c  kvdisk.h  model.h  openai_server.py  profile.h  ref_glm.json  resource_plan.py  sample.h  sched.h  scheduler.h  setup.sh  st.h  zun
c/tests/: test_cache.c  test_cli_output.py  test_doctor.py  test_env_defaults.py  test_kvdisk.c  test_openai_server.py  test_profile.c  (+3 more)
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
phase0/: RUNBOOK.md  bench.sh
router/: README.md  registry.yaml  router.py
scripts/: check_integrity.py
web/: README.md  index.html  package-lock.json  package.json
(+16 files in other folders)
