[package]
name = "zunzun-desktop"
version = "0.1.0"
description = "Native desktop shell for the zunzun inference engine"
authors = ["zunzun contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "zunzun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
